Revision history for Perl extension AnyEvent.

	- provide $AE::VERSION.
        - removed traces of "no strict 'refs'".
        - implement punycode_encode/decode, idn_nameprep
          and idn_to_ascii operations in AnyEvent::Util.

5.22  Sat Dec  5 03:51:13 CET 2009
	- downgrade-or-fail in AnyEvent::Handle::push_write, to
          diagnose encoding failures earlier and more succinctly.
          (this works around bugs in perl, throwing away encoding info
          when passing scalar data to extensions).
        - add more examples to AnyEvent::Socket manpage.
        - upgrade internal warning set to the same as common::sense 2.03.
        - use pack "n/a*" for pre-5.8.9 perl compatibility in AnyEvent::DNS
          (John Beppu).
        - AnyEvent::Socket::inet_aton now properly supports ipv6, as documented.
        - add google public dns servers to fallback server set and make sure
          we load-balance properly between the three sets. also add all
          fallback dns servers, not just a random one, to each dns config.

5.21  Thu Nov 19 02:48:47 CET 2009
	- fix a problem where socket constants were called with parameters
          (spotted by David Friedland).
        - fork_call never use'd POSIX (reported by Daisuke Maki).
        - improve perl 5.6 compatibility further (but it still won't work
          unless you rip out everything but the core).
        - prefer Net::DNS::Resolver over ipconfig, if installed, on win32.
          uses 10MB of RAM, but doesn't open a console window. *sigh*.

5.202 Wed Oct 14 22:35:44 CEST 2009
	- AnyEvent::DNS would unexpectedly clobber $_ under windows
          (analysed by Matthias Waldorf).
        - AnyEvent::Handle::run_cmd can now pass the PID of the
          newly-created process, which is much less useful than it might
          sound (based on patch by Yann Kerherve).

5.201 Tue Sep 29 12:09:25 CEST 2009
	- AnyEvent:Handle::on_starttls/on_stoptls methods were broken