@@ -1147,7 +1147,7 @@ package AnyEvent;
 sub common_sense {
    # from common:.sense 1.0
    ${^WARNING_BITS} = "\xfc\x3f\x33\x00\x0f\xf3\xcf\xc0\xf3\xfc\x33\x00";
-   # use strict vars subs
+   # use strict vars subs - NO UTF-8, as Util.pm doesn't like this atm. (uts46data.pl)
    $^H |= 0x00000600;
 }
 
